@@ -2,6 +2,7 @@ eglibc (2.13-13) UNRELEASED; urgency=low
 
   * sysdeps/*.mk: install the biarch includes in /usr/include instead
     of the multiarch path. Fix FTBFS on some architectures.
+  * sysdeps/mips.*mk: fix triarch includes on mips and mipsel.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 31 Jul 2011 02:31:45 +0200
 
